2008-12-06  Ben Van Mechelen  <me@benvm.be>

	* garmon/__init__.py:
	* garmon/garmon:
	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	* garmon/plugin_manager.py:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	* plugins/live_data/live_data.py:
	    Make use of the logging facilities in python
	    to display messages
	    

2008-12-05  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	* garmon/plugin_manager.py:
	* garmon/prefs.py:
	* garmon/sensor.py:
	* plugins/dashboard/dashboard.py:
	    Make some code a bit more pythonic + cleanups

2008-10-21  Ben Van Mechelen  <me@benvm.be>

	* plugins/freeze_frame_data/freeze_frame_data.py:
	    Remove obsolete FreezeFrameDataView class


2008-10-21  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	    bump version to 0.2.1
	    

2008-10-20  Ben Van Mechelen  <me@benvm.be>

	* garmon/scheduler.py:
	    Fix the add method
	    

2008-10-17  Ben Van Mechelen  <me@benvm.be>

	* data/garmon.schemas:
	    list plugins correctly in plugins.saved schema
	    

2008-10-17  Ben Van Mechelen  <me@benvm.be>

	* plugins/freeze_frame_data/freeze_frame_data.glade:
	* plugins/live_data/live_data.glade:
	    small changes in the layout
	

2008-10-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/widgets.py:
	    Add update_name property to SensorProgressView
	* plugins/freeze_frame_data/freeze_frame_data.glade:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	    make the gui look like LiveData
	

2008-10-16  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	* plugins/Makefile.am:
	* plugins/o2_sensors/Makefile.am:
	* plugins/o2_sensors/o2_sensors.glade:
	* plugins/o2_sensors/o2_sensors.py:
	    remove o2 sensors plugin
	    

2008-10-16  Ben Van Mechelen  <me@benvm.be>

	* scripts/elm_sim.py:
	    add pid responses for egr valve
	    

2008-10-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	    correct egr_error so it returns an int


2008-10-15  Ben Van Mechelen  <me@benvm.be>
